--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px 0;
+    font-size: 1rem;
 
     a {
         color: var(--color-primary);
