--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     padding: 20px 0;
     font-size: 1rem;
-    background-color: #c0c0c0;
+    background-color: #dbdbdb;
 
     a {
         color: var(--color-primary);
