Fix navigation header

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
   background-color: var(--color-primary);
-  height: 66px;
+  min-height: 66px;
 
   h1,
   ul,
