--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -44,16 +44,77 @@
     align-items: center;
 
     li a {
-        padding: 10px 15px;
-        color: var(--font-color-dark);
-        font-size: 1rem;
-        &:hover {
-            opacity: 0.7;
-        }
+      padding: 10px 15px;
+      color: var(--font-color-dark);
+      font-size: 1rem;
+      &:hover {
+        opacity: 0.7;
+      }
     }
 
     @include respond-below(sm) {
-        display: none;
+      display: none;
+    }
+  }
+
+  .mobileDropDown {
+    display: none;
+    position: relative;
+
+    @include respond-below(sm) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+    }
+
+    .menuToggle {
+      width: 20px;
+      height: 20px;
+      transition: 0.2s all ease-in-out;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+
+    .menuOptions {
+      position: absolute;
+      background-color: #ffffff;
+      right: 0;
+      width: 300px;
+      border-radius: 5px;
+      top: 40px;
+      display: flex;
+      flex-direction: column;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+      height: auto;
+      box-shadow: 0 10px 20px #050b2742;
+      z-index: 99;
+
+      li {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        border-bottom: 1px solid #eee;
+
+        &:last-child {
+          border-bottom: none;
+        }
+      }
+
+      a {
+        padding: 15px 20px;
+        color: var(--color-primary);
+      }
     }
   }
 }
