--- a/src/templates/BlogTemplate/styles.module.scss
+++ b/src/templates/BlogTemplate/styles.module.scss
@@ -44,6 +44,13 @@
     }
   }
 
+  code {
+    background-color: #e9400d2d;
+    padding: 0 5px;
+    border-radius: 2px;
+    color: #a32600;
+  }
+
   blockquote {
       margin: 0;
       padding: 10px 10px 10px 15px;
